// Protobuf message file
// written by: Brandon Luong

syntax="proto3";
package main;
option go_package = ".;Tokens";

message Token {
      string token = 1;
}

message Ingredient {
      int64 id = 1;
      uint64 UID = 2;
      string Name =3;
      string Quantity = 4;
      string Weight = 5;
      string Volume =6 ;
      string Expiration = 7;
      string ImageLink = 8;
}

message Pantry {
      repeated Ingredient Pantry = 1;
}

message Empty {}

message UserInfo {
      string City = 1;
      string State = 2;
      repeated string Diets = 3;
      repeated string Intolerances = 4;
      float QuantityThreshold = 5;
}

message Food {
      string Name = 1;
      string Link = 2;
      string Image = 3;
      float Rating = 4;
      int64 Reviews = 5;
      bool InStock = 6;
      float Price = 7;
}

message SearchQuery {
      string Token = 1;
      string ID = 2;
}

message Store {
      string Address = 1;
      string Monday = 2;
      string Tuesday = 3;
      string Wednesday = 4;
      string Thursday = 5;
      string Friday = 6;
      string Saturday = 7;
      string Sunday = 8;
      string Distance = 9;
      repeated Food Results = 10;
}

service Server {
      rpc AuthUser(Token) returns (Token) {}
      rpc GetPantry(Token) returns (Pantry) {}
      rpc GetUserInfo(Token) returns (UserInfo) {}
      rpc GetGroceries(Token) returns (Pantry) {}
      rpc GetSearchResults(SearchQuery) returns (Store) {}
  }